[gd_scene load_steps=25 format=3 uid="uid://do88bn15nxcbu"]

[ext_resource type="Script" path="res://Scenes/GameScenes/Manu/OptionsMenu/options.gd" id="1_dibnq"]
[ext_resource type="Theme" uid="uid://do6gg3r8fydfa" path="res://Resources/Themes/main_theme.tres" id="1_i7ifc"]
[ext_resource type="Script" path="res://Resources/RandomScripts/game_button.gd" id="2_dtl4u"]
[ext_resource type="Texture2D" uid="uid://8glmydbtnfi0" path="res://Images/UI/DirectionKey/1/arrow key1.png" id="3_rrsx8"]
[ext_resource type="Texture2D" uid="uid://b613ar7xw3mka" path="res://Images/BG/BG.png" id="3_vwox8"]
[ext_resource type="PackedScene" uid="uid://y2q4kerc0f8g" path="res://Scenes/UI/TaskGrid/task_grid.tscn" id="4_2xjqw"]
[ext_resource type="Texture2D" uid="uid://33lao13rogp1" path="res://Images/Menu/Credits/itch.logo.png" id="5_l6pu5"]
[ext_resource type="LabelSettings" uid="uid://mp2p7an3rv7" path="res://Resources/Themes/LabelSettings/option_settings.tres" id="5_wuwyj"]
[ext_resource type="Texture2D" uid="uid://b4iv2tsyrl17g" path="res://Images/Menu/Credits/twitter-x-seeklogo1.png" id="6_ilpl1"]
[ext_resource type="Texture2D" uid="uid://noecnnt5hxwr" path="res://Images/square_curved.png" id="9_q2qlw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i3u2l"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_tui5s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d3uhj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iojhu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0tyr"]
bg_color = Color(0.847059, 0.847059, 0.847059, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="ButtonGroup" id="ButtonGroup_ldggw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_arvc5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5d71m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_upfq6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qt7pf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1svsc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tcx73"]
content_margin_left = 10.0
texture = ExtResource("9_q2qlw")
expand_margin_left = 10.0
expand_margin_right = 10.0
modulate_color = Color(0.729412, 0.431373, 0.956863, 0.129412)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ldjlp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pookw"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i7ifc")
script = ExtResource("1_dibnq")

[node name="BG" type="TextureRect" parent="."]
modulate = Color(0.707967, 0.707967, 0.707967, 0.352941)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_vwox8")
expand_mode = 3
stretch_mode = 5

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 50

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Main" type="TabContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_i3u2l")
tab_alignment = 1
current_tab = 0
tabs_visible = false
use_hidden_tabs_for_min_size = true
tab_focus_mode = 0

[node name="Tasks" type="Control" parent="Margin/VBox/Main"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Margin" type="MarginContainer" parent="Margin/VBox/Main/Tasks"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="V" type="VBoxContainer" parent="Margin/VBox/Main/Tasks/Margin"]
layout_mode = 2
alignment = 1

[node name="Box" type="Control" parent="Margin/VBox/Main/Tasks/Margin/V"]
layout_mode = 2
size_flags_vertical = 3

[node name="TaskGrid" parent="Margin/VBox/Main/Tasks/Margin/V/Box" instance=ExtResource("4_2xjqw")]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -66.5
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="VBoxContainer" parent="Margin/VBox/Main/Tasks/Margin/V"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 50

[node name="Completed" type="Label" parent="Margin/VBox/Main/Tasks/Margin/V/Options"]
layout_mode = 2
text = "Tak
Nie"
label_settings = ExtResource("5_wuwyj")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Margin/VBox/Main/Tasks/Margin/V/Options"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Gap" type="Control" parent="Margin/VBox/Main/Tasks/Margin/V/Options"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Text1" type="Label" parent="Margin/VBox/Main/Tasks/Margin/V/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="Buttons1" type="HBoxContainer" parent="Margin/VBox/Main/Tasks/Margin/V/Options"]
layout_mode = 2

[node name="Skip" type="Button" parent="Margin/VBox/Main/Tasks/Margin/V/Options/Buttons1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 84
text = "Skip"

[node name="Reroll" type="Button" parent="Margin/VBox/Main/Tasks/Margin/V/Options/Buttons1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 84
text = "Reroll"

[node name="Gap2" type="Control" parent="Margin/VBox/Main/Tasks/Margin/V/Options"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Text2" type="Label" parent="Margin/VBox/Main/Tasks/Margin/V/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="Buttons2" type="HBoxContainer" parent="Margin/VBox/Main/Tasks/Margin/V/Options"]
layout_mode = 2

[node name="Skip" type="Button" parent="Margin/VBox/Main/Tasks/Margin/V/Options/Buttons2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 84
text = "Skip"

[node name="Reroll" type="Button" parent="Margin/VBox/Main/Tasks/Margin/V/Options/Buttons2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 84
text = "Reroll"

[node name="Gap3" type="Control" parent="Margin/VBox/Main/Tasks/Margin/V/Options"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Text3" type="Label" parent="Margin/VBox/Main/Tasks/Margin/V/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="Buttons3" type="HBoxContainer" parent="Margin/VBox/Main/Tasks/Margin/V/Options"]
layout_mode = 2

[node name="Skip" type="Button" parent="Margin/VBox/Main/Tasks/Margin/V/Options/Buttons3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 84
text = "Skip"

[node name="Reroll" type="Button" parent="Margin/VBox/Main/Tasks/Margin/V/Options/Buttons3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 84
text = "Reroll"

[node name="PlayerCustomization" type="Control" parent="Margin/VBox/Main"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Margin" type="MarginContainer" parent="Margin/VBox/Main/PlayerCustomization"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/Main/PlayerCustomization/Margin"]
layout_mode = 2

[node name="Body" type="ColorRect" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2
color = Color(0.262745, 0.262745, 0.262745, 0)

[node name="Box" type="VBoxContainer" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="RichTextLabel" type="RichTextLabel" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 64
text = "Skul body"
fit_content = true
autowrap_mode = 0

[node name="Texture" type="TextureRect" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
texture = SubResource("PlaceholderTexture2D_tui5s")
stretch_mode = 5

[node name="Buttons" type="MarginContainer" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 40

[node name="Box" type="HBoxContainer" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50
alignment = 1

[node name="Left" type="Button" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box" node_paths=PackedStringArray("image")]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_d3uhj")
script = ExtResource("2_dtl4u")
image = NodePath("TextureRect")

[node name="TextureRect" type="TextureRect" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Left"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 128.0
texture = ExtResource("3_rrsx8")

[node name="Right" type="Button" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box" node_paths=PackedStringArray("image")]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_d3uhj")
script = ExtResource("2_dtl4u")
image = NodePath("TextureRect")

[node name="TextureRect" type="TextureRect" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Right"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 128.0
rotation = 3.14159
texture = ExtResource("3_rrsx8")

[node name="Line" type="ColorRect" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
color = Color(0.262745, 0.262745, 0.262745, 0)

[node name="Box" type="VBoxContainer" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box"]
layout_mode = 2
size_flags_horizontal = 4
text = "Line Customization"
fit_content = true
autowrap_mode = 0

[node name="Margin" type="MarginContainer" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Grid" type="GridContainer" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 35
columns = 3

[node name="BasicColor" type="Button" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e0tyr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_iojhu")
toggle_mode = true
button_group = SubResource("ButtonGroup_ldggw")

[node name="ColorRect" type="ColorRect" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/BasicColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="RedColor" type="Button" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e0tyr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_iojhu")
toggle_mode = true
button_group = SubResource("ButtonGroup_ldggw")

[node name="ColorRect" type="ColorRect" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/RedColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="BlueColor" type="Button" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e0tyr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_iojhu")
toggle_mode = true
button_group = SubResource("ButtonGroup_ldggw")

[node name="ColorRect" type="ColorRect" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/BlueColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="GreenColor" type="Button" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e0tyr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_iojhu")
toggle_mode = true
button_group = SubResource("ButtonGroup_ldggw")

[node name="ColorRect" type="ColorRect" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/GreenColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="PinkColor" type="Button" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e0tyr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_iojhu")
toggle_mode = true
button_group = SubResource("ButtonGroup_ldggw")

[node name="ColorRect" type="ColorRect" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/PinkColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="YellowColor" type="Button" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iojhu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e0tyr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_iojhu")
toggle_mode = true
button_group = SubResource("ButtonGroup_ldggw")

[node name="ColorRect" type="ColorRect" parent="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/YellowColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Options" type="Control" parent="Margin/VBox/Main"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Margin" type="MarginContainer" parent="Margin/VBox/Main/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/Main/Options/Margin"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="GFXLabel" type="Label" parent="Margin/VBox/Main/Options/Margin/VBox"]
layout_mode = 2
text = "Graphics options"
label_settings = ExtResource("5_wuwyj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Graphics" type="VBoxContainer" parent="Margin/VBox/Main/Options/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Particle" type="VBoxContainer" parent="Margin/VBox/Main/Options/Margin/VBox/Graphics"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ParticleLabel" type="RichTextLabel" parent="Margin/VBox/Main/Options/Margin/VBox/Graphics/Particle"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.788235, 0.788235, 0.788235, 1)
text = "Particles"
fit_content = true

[node name="ParticleSlider" type="HSlider" parent="Margin/VBox/Main/Options/Margin/VBox/Graphics/Particle"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 1.0
step = 0.1
value = 0.8
scrollable = false
tick_count = 6
ticks_on_borders = true

[node name="DebugLabelButton" type="CheckButton" parent="Margin/VBox/Main/Options/Margin/VBox/Graphics"]
layout_mode = 2
text = "Debug label"

[node name="HSeparator" type="HSeparator" parent="Margin/VBox/Main/Options/Margin/VBox"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="Margin/VBox/Main/Options/Margin/VBox"]
layout_mode = 2
text = "Sound options"
label_settings = ExtResource("5_wuwyj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundSlider" type="VBoxContainer" parent="Margin/VBox/Main/Options/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MasterLabel" type="RichTextLabel" parent="Margin/VBox/Main/Options/Margin/VBox/SoundSlider"]
layout_mode = 2
theme_override_colors/default_color = Color(0.788235, 0.788235, 0.788235, 1)
text = "Master"
fit_content = true

[node name="MasterSlider" type="HSlider" parent="Margin/VBox/Main/Options/Margin/VBox/SoundSlider"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
max_value = 1.2
step = 0.01
value = 1.0
scrollable = false

[node name="MusicSlider" type="RichTextLabel" parent="Margin/VBox/Main/Options/Margin/VBox/SoundSlider"]
visible = false
layout_mode = 2
text = "Music - not implemented"
fit_content = true

[node name="MusicSlider2" type="HSlider" parent="Margin/VBox/Main/Options/Margin/VBox/SoundSlider"]
visible = false
layout_mode = 2
editable = false
scrollable = false

[node name="MarginCredits" type="MarginContainer" parent="Margin/VBox/Main/Options/Margin/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Credits" type="HBoxContainer" parent="Margin/VBox/Main/Options/Margin/VBox/MarginCredits"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Itch" type="Button" parent="Margin/VBox/Main/Options/Margin/VBox/MarginCredits/Credits"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(0.709804, 0.952941, 1, 0.870588)
theme_override_colors/icon_disabled_color = Color(0.564962, 0.564962, 0.564962, 0.509804)
icon = ExtResource("5_l6pu5")
icon_alignment = 1
expand_icon = true

[node name="Twitter" type="Button" parent="Margin/VBox/Main/Options/Margin/VBox/MarginCredits/Credits"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(0.709804, 0.952941, 1, 0.870588)
theme_override_colors/icon_disabled_color = Color(0.564962, 0.564962, 0.564962, 0.509804)
icon = ExtResource("6_ilpl1")
icon_alignment = 1
expand_icon = true

[node name="WebAd" type="Label" parent="Margin/VBox/Main/Options/Margin/VBox"]
visible = false
modulate = Color(1, 1, 1, 0.6)
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 48
text = "For main version check android build"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ResetData" type="Button" parent="Margin/VBox/Main/Options/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_arvc5")
text = "Reset game data"

[node name="Label" type="Label" parent="Margin/VBox/Main/Options/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 25
text = "Version"

[node name="Tab" type="MarginContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="TabBar" type="TabBar" parent="Margin/VBox/Tab"]
layout_mode = 2
theme_override_colors/font_unselected_color = Color(0.784314, 0.784314, 0.784314, 0.784314)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_styles/button_highlight = SubResource("StyleBoxEmpty_5d71m")
theme_override_styles/button_pressed = SubResource("StyleBoxEmpty_upfq6")
theme_override_styles/tab_unselected = SubResource("StyleBoxEmpty_qt7pf")
theme_override_styles/tab_hovered = SubResource("StyleBoxEmpty_1svsc")
theme_override_styles/tab_selected = SubResource("StyleBoxTexture_tcx73")
theme_override_styles/tab_disabled = SubResource("StyleBoxEmpty_ldjlp")
theme_override_styles/tab_focus = SubResource("StyleBoxEmpty_pookw")
current_tab = 0
tab_alignment = 1
scrolling_enabled = false
scroll_to_selected = false
tab_count = 3
tab_0/title = "Tasks"
tab_1/title = "  Skulls  "
tab_2/title = "  Options  "

[node name="ReturnButotn" type="Button" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 80
text = "Return to menu"

[connection signal="button_down" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Left" to="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Left" method="on_button_update"]
[connection signal="button_up" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Left" to="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Left" method="on_button_update"]
[connection signal="pressed" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Left" to="." method="change_body_object" binds= [-1]]
[connection signal="button_down" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Right" to="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Right" method="on_button_update"]
[connection signal="button_up" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Right" to="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Right" method="on_button_update"]
[connection signal="pressed" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Body/Box/Buttons/Box/Right" to="." method="change_body_object" binds= [1]]
[connection signal="pressed" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/BasicColor" to="." method="player_line_color_change" binds= [0]]
[connection signal="pressed" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/RedColor" to="." method="player_line_color_change" binds= [1]]
[connection signal="pressed" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/BlueColor" to="." method="player_line_color_change" binds= [2]]
[connection signal="pressed" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/GreenColor" to="." method="player_line_color_change" binds= [3]]
[connection signal="pressed" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/PinkColor" to="." method="player_line_color_change" binds= [4]]
[connection signal="pressed" from="Margin/VBox/Main/PlayerCustomization/Margin/VBox/Line/Box/Margin/Grid/YellowColor" to="." method="player_line_color_change" binds= [5]]
[connection signal="value_changed" from="Margin/VBox/Main/Options/Margin/VBox/Graphics/Particle/ParticleSlider" to="." method="change_particle_amount"]
[connection signal="toggled" from="Margin/VBox/Main/Options/Margin/VBox/Graphics/DebugLabelButton" to="." method="debug_label_toggle"]
[connection signal="value_changed" from="Margin/VBox/Main/Options/Margin/VBox/SoundSlider/MasterSlider" to="." method="change_master_bus_volume"]
[connection signal="pressed" from="Margin/VBox/Main/Options/Margin/VBox/MarginCredits/Credits/Itch" to="." method="itch_button_credits"]
[connection signal="pressed" from="Margin/VBox/Main/Options/Margin/VBox/MarginCredits/Credits/Twitter" to="." method="twitter_button_credits"]
[connection signal="pressed" from="Margin/VBox/Main/Options/Margin/VBox/ResetData" to="." method="on_game_data_reset"]
[connection signal="tab_changed" from="Margin/VBox/Tab/TabBar" to="." method="on_change_tab"]
[connection signal="pressed" from="Margin/VBox/ReturnButotn" to="." method="return_button_pressed"]
